переделала кодогенерацию для правильного отображения заявок
